--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "connect": "^3.6.6",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {
     "request": "^2.81.0",
